--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-discord==2.3.2
-discord.py==2.4.0
-dotenv==0.9.9
-python-dotenv==1.0.1
+aiohttp==3.8.4
+async-timeout==4.0.2
+discord.py==2.2.2
+httplib2==0.20.4
+python-dotenv==0.21.0
 pytz==2025.2
-requests==2.32.3
-sqlparse==0.5.1
-pyyaml==6.0
+PyYAML==6.0.2
+requests==2.28.1
